grunt task setup
configured package.json and Gruntfile.js for quality assurance

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <meta name="keywords" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <script type="text/javascript" src="../fieldValidator.js"></script>
+        <script type="text/javascript" src="scripts/fieldValidator.js"></script>
         <link rel="shortcut icon" href="favicon.ico" />
 
     </head>
