--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,10 @@
 
     </head>
     <body itemscope itemtype="http://schema.org/WebPage">
-        <form novalidate="novalidate">
+        <form novalidate="novalidate" id="my-form">
 			<span id="temporary-input-calc-element"></span>
 			<label for="first_name">text field
-				<input requiREd="requIred" id="first_name" type="tEXt" minlength="5" MAXLength="10" placeholder="first name" name="first_name" />
+				<input requiREd="requIred" id="first_name" type="tEXt" minlength="5" MAXLength="10" placeholder="first name" pattern="^[a-z,A-Z]*[-,\s]?[a-z,A-Z]*$" name="first_name" />
 			</label>
 			<hr/>
 			<label for="brand">Select dropdown
@@ -42,13 +42,8 @@
 				<input name="contactme" value="" required="required" type="email" placeholder="someone@somewhere.com" />
 			</label>
 			<hr/>
-			<label for="data">Datalist
-				<input name="data" type="text" list="datalist" placeholder="Datalist test"/>
-				<datalist id="datalist">
-					<option value="1">Data 1</option>
-					<option value="2">Data 2</option>
-					<option value="null">null</option>
-				</datalist>
+			<label for="data">Number
+				<input name="data" type="number" />
 			</label>
             <hr/>
             <label for="radios2">
@@ -68,7 +63,7 @@
                 <input type="radio" name="radios2" value="3" />
             </label>
             <hr/>
-        <input type="button" onclick="getValidation(this.parent);" value="Validate"></input>
+        <input type="button" onclick="fieldValidator.validate(document.getElementById('my-form'));" value="Validate"></input>
 		</form>
     </body>
 </html>
