added tests for abstractStringTypes and abstractNumericTypes

--- a/test/test-form.html
+++ b/test/test-form.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     // inputs for each type
-    <input type="text" name="text" id="text" />
+    <input type="text" name="text" id="text" minlength="5" maxlength="10" pattern="^[^0-9]$" />
     <input type="url" name="url" id="url" />
     <input type="time" name="time" id=time" />
     <input type="tel" name="tel" id="tel" />
