--- a/test/test-form.html
+++ b/test/test-form.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Test form for fieldValidator</title>
+    <style>
+        input {
+            display: block;
+            max-width: 200px;
+        }
+    </style>
+    <script type="text/javascript" src="../src/scripts/fieldValidator.js"></script>
 </head>
 <body>
     // inputs for each type
-    <input type="button" name="button" id="button" />
+    <input type="button" name="button" id="button" value="button" />
     <input type="date" name="date" id="date" />
     <input type="datetime-local" name="datetime-local" id="datetime-local" />
     <input type="email" name="email" id="email" />
@@ -24,22 +31,22 @@
     <input type="time" name="time" id=time" />
     <input type="url" name="url" id="url" />
     <input type="week" name="week" id="week" />
-
+<hr />
     // radios
     <input type="radio" name="radio" id="radio1" required="required"/>
     <input type="radio" name="radio" id="radio2" />
     <input type="radio" name="radio" id="radio3" />
-
+<hr />
     // checkboxes
-    <input type="checkbox" name="checkbox" id="checkbox1" required="required"/>
-    <input type="checkbox" name="checkbox" id="checkbox2" />
-    <input type="checkbox" name="checkbox" id="checkbox3" />
-
+    <input type="checkbox" name="checkbox" id="checkbox1" value="c1" required="required"/>
+    <input type="checkbox" name="checkbox" id="checkbox2" value="c2" />
+    <input type="checkbox" name="checkbox" id="checkbox3" value="c3" />
+<hr/>
     // textarea
     <textarea name="textarea" id="textarea"></textarea>
-
+<hr/>
     // select
-    <select name="select" id="select">
+    <select name="select" id="select" required="required">
         <option value=""></option>
         <option value="1">1</option>
         <option value="hello">hello</option>
