added checkbox tests

--- a/test/test-form.html
+++ b/test/test-form.html
@@ -37,10 +37,12 @@
     <input type="radio" name="radio" id="radio2" />
     <input type="radio" name="radio" id="radio3" />
 <hr />
+    <div id="checkbox-container">
     // checkboxes
-    <input type="checkbox" name="checkbox" id="checkbox1" value="c1" required="required"/>
-    <input type="checkbox" name="checkbox" id="checkbox2" value="c2" />
-    <input type="checkbox" name="checkbox" id="checkbox3" value="c3" />
+        <input type="checkbox" name="checkbox" id="checkbox1" value="c1" required="required"/>
+        <input type="checkbox" name="checkbox" id="checkbox2" value="c2" />
+        <input type="checkbox" name="checkbox" id="checkbox3" value="c3" />
+    </div>
 <hr/>
     // textarea
     <textarea name="textarea" id="textarea"></textarea>
